# icoutils

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL_cmake.md  Makefile.am  NEWS  README  bootstrap  configure.ac  gnulib-update  vcpkg-configuration.json  vcpkg.json
cmake/: config.h.in
common/: Makefile.am  error.c  error.h  hmap.c  hmap.h  io-utils.c  llist.c  strbuf.c  strbuf.h  tmap.c  tmap.h
compat-lib/: AUTHORS  COPYING  INSTALL  NEWS  bootstrap  configure.ac  update
compat-lib/m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
compat-lib/src/: Makefile.am
icotool/: Makefile.am  create.c  extract.c  icotool.1  icotool.h  main.c  win32.h
lib/: .gitignore  Makefile.am
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
po/: ChangeLog  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  icoutils.pot
vcpkg-overlay/icoutils-compat-lib/: portfile.cmake  vcpkg.json
wrestool/: Makefile.am  extract.c  fileread.c  main.c  restable.c
