#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.64])
AC_INIT(icoutils-compat-lib, 0.33.0, frank.richter@gmail.com)
AC_CONFIG_HEADER([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

# Stuff for the config.h.in file
AC_GNU_SOURCE

# Checks for programs.
AC_PROG_CC
gl_EARLY

# Gnulib
gl_INIT

AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
